--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,7 +8,11 @@
     <li class ="pt-6 px-2"routerLinkActive="bg-red-900 text-white"><a routerLink="/calculadora">Calculadora</a></li>
     <li class ="pt-6 px-2" routerLinkActive="bg-red-900 text-white"><a routerLink="/soporte">Soporte</a></li>
   </ul>
-  <ul class="caret-transparent">
+  <ul [ngIf]="!isLogged" class="caret-transparent">
     <li class="rounded-t-lg bg-red-700 pb-2 mt-6"><a href="/login" class="text-white m-2 pb-8">Ingresar</a></li>
+  </ul>
+  <ul [ngIf]="isLogged" class="caret-transparent">
+    <li class="rounded-t-lg bg-red-700 pb-2 mt-6"><a href="/logout" class="text-white m-2 pb-8">Cerrar Sesión</a></li>
+    <li class="rounded-t-lg bg-red-700 pb-2 mt-6"><a href="/profile" class="text-white m-2 pb-8">Perfil</a></li>
   </ul>
 </nav>
