Pagina soporte preview

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="flex justify-center items-center mb-4">
-                    <button type="submit" class="px-4 py-2 bg-red-700 text-white font-semibold rounded hover:bg-red-800 w-full">Registrarse</button>
+                    <button type="submit" class="px-4 py-2 bg-red-700 text-white font-semibold rounded hover:bg-red-800 w-full cursor-pointer">Registrarse</button>
                 </div>
                 <div class="text-center mt-6">
                     <span class="block text-gray-600 mb-2">¿Ya tienes una cuenta?</span>
