--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,14 +17,14 @@
                     <input id="password" type="password" name="password" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
                 </div>
                 <div class="flex justify-between items-center mb-4">
-                    <button type="button" class="text-red-700 underline hover:text-red-400 text-sm p-0 bg-transparent border-none">Olvidé mi contraseña</button>
-                    <button type="submit" class="px-4 py-2 bg-red-700 text-white font-semibold rounded hover:bg-red-800">Ingresar</button>
+                    <button type="button" class="text-red-700 underline hover:text-red-400 text-sm p-0 bg-transparent border-none cursor-pointer">Olvidé mi contraseña</button>
+                    <button type="submit" class="px-4 py-2 bg-red-700 text-white font-semibold rounded hover:bg-red-800 cursor-pointer">Ingresar</button>
                 </div>
                 <div class="text-center mt-6">
                     <span class="block text-gray-600 mb-2">¿No te has registrado?</span>
                     <a 
                         type="button" 
-                        class="px-6 py-2 bg-red-700 text-white font-bold rounded-full shadow-lg hover:bg-red-800 transition-all duration-200 text-base border-2 border-red-700 hover:border-red-800"
+                        class="px-6 py-2 bg-red-700 text-white font-bold rounded-full shadow-lg hover:bg-red-800 transition-all duration-200 text-base border-2 border-red-700 hover:border-red-800 cursor-pointer"
                         routerLink="/register"
                     >
                         Registrarse
