--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,19 +6,15 @@
     <!-- Sección de login -->
     <div class="flex-1 flex items-center justify-center bg-red-700">
         <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md">
-            <form class="space-y-6" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+            <form>
                 <h2 class="text-red-700 text-2xl font-bold mb-6">Iniciar Sesión</h2>
-                <!-- Mostrar mensaje si existe -->
-                <div *ngIf="mensaje" class="mb-4 text-center text-red-600 font-semibold">
-                    {{ mensaje }}
-                </div>
                 <div class="mb-4 caret-black">
                     <label for="email" class="block text-red-700 mb-1">Correo electrónico</label>
-                    <input formControlName="email" id="email" type="email" name="email" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
+                    <input id="email" type="email" name="email" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
                 </div>
                 <div class="mb-4 caret-black">
                     <label for="password" class="block text-red-700 mb-1">Contraseña</label>
-                    <input formControlName="password" id="password" type="password" name="password" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
+                    <input id="password" type="password" name="password" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
                 </div>
                 <div class="flex justify-between items-center mb-4">
                     <button type="button" class="text-red-700 underline hover:text-red-400 text-sm p-0 bg-transparent border-none cursor-pointer">Olvidé mi contraseña</button>
