--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,12 +1,13 @@
 <div class="flex h-screen caret-transparent">
   <!-- Sección de imagen promocional -->
-  <div class="flex-1 bg-gray-100 flex items-center justify-center">
+<div class="flex-1 bg-gray-100 flex items-center justify-center overflow-hidden">
     <img
-      src="assets/promo-image.jpg"
-      alt="Promoción"
-      class="max-w-4/5 max-h-4/5 rounded-lg"
+        src="images/markus-spiske-RWTUrJf7I5w-unsplash.jpg"
+        alt="Promoción"
+        class="w-full h-full object-cover rounded-lg"
+        style="width: 100%; height: 100%; object-fit: cover; object-position: center;"
     />
-  </div>
+</div>
   <!-- Sección de registro -->
   <div class="flex-1 flex items-center justify-center bg-red-700">
     <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-2xl">
