--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,8 @@
 <div class="flex h-screen caret-transparent">
     <!-- Sección de imagen promocional -->
-    <div class="flex-1 bg-gray-100 flex items-center justify-center overflow-hidden">
-    <img
-        src="images/bernd-dittrich-yfTSNbggFyE-unsplash.jpg"
-        alt="Promoción"
-        class="w-full h-full object-cover rounded-lg"
-        style="width: 100%; height: 100%; object-fit: cover; object-position: center;"
-    />
-</div>
+    <div class="flex-1 bg-gray-100 flex items-center justify-center">
+        <img src="assets/promo-image.jpg" alt="Promoción" class="max-w-4/5 max-h-4/5 rounded-lg" />
+    </div>
     <!-- Sección de login -->
     <div class="flex-1 flex items-center justify-center bg-red-700">
         <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md">
