--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,25 +6,29 @@
     <!-- Sección de login -->
     <div class="flex-1 flex items-center justify-center bg-red-700">
         <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md">
-            <form>
+            <form class="space-y-6" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
                 <h2 class="text-red-700 text-2xl font-bold mb-6">Iniciar Sesión</h2>
+                <!-- Mostrar mensaje si existe -->
+                <div *ngIf="mensaje" class="mb-4 text-center text-red-600 font-semibold">
+                    {{ mensaje }}
+                </div>
                 <div class="mb-4 caret-black">
                     <label for="email" class="block text-red-700 mb-1">Correo electrónico</label>
-                    <input id="email" type="email" name="email" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
+                    <input formControlName="email" id="email" type="email" name="email" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
                 </div>
                 <div class="mb-4 caret-black">
                     <label for="password" class="block text-red-700 mb-1">Contraseña</label>
-                    <input id="password" type="password" name="password" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
+                    <input formControlName="password" id="password" type="password" name="password" required class="w-full px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-400 bg-white" />
                 </div>
                 <div class="flex justify-between items-center mb-4">
-                    <button type="button" class="text-red-700 underline hover:text-red-400 text-sm p-0 bg-transparent border-none cursor-pointer">Olvidé mi contraseña</button>
-                    <button type="submit" class="px-4 py-2 bg-red-700 text-white font-semibold rounded hover:bg-red-800 cursor-pointer">Ingresar</button>
+                    <button type="button" class="text-red-700 underline hover:text-red-400 text-sm p-0 bg-transparent border-none">Olvidé mi contraseña</button>
+                    <button type="submit" class="px-4 py-2 bg-red-700 text-white font-semibold rounded hover:bg-red-800">Ingresar</button>
                 </div>
                 <div class="text-center mt-6">
                     <span class="block text-gray-600 mb-2">¿No te has registrado?</span>
                     <a 
                         type="button" 
-                        class="px-6 py-2 bg-red-700 text-white font-bold rounded-full shadow-lg hover:bg-red-800 transition-all duration-200 text-base border-2 border-red-700 hover:border-red-800 cursor-pointer"
+                        class="px-6 py-2 bg-red-700 text-white font-bold rounded-full shadow-lg hover:bg-red-800 transition-all duration-200 text-base border-2 border-red-700 hover:border-red-800"
                         routerLink="/register"
                     >
                         Registrarse
