--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-red-900 ">
+<div class="h-full bg-red-900 ">
  <div class="text-center mb-4">
     <header class="border-b-2 border-gray-300 mb-8 pb-4">
   <h1 class="text-3xl md:text-5xl font-bold text-white pt-6">CALCULADORA</h1>
