bob  paquete  service

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="flex-1 bg-red-700 flex items-center">
         <div class="flex flex-col h-50 w-50 bg-white mx-auto ">
-            asd 
+       <app-ordenes-perfil></app-ordenes-perfil>
         </div>
     </div>
 </div>
