v1 bot ront agregado y parte landing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col h-dvh bg-gray-200">
 
   <app-nav></app-nav>
+  <app-chatbot></app-chatbot>
 
   <main class="flex-grow overflow-y-auto">
     
