--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,11 @@
 <nav class="flex justify-between items-center">
   <div class="grid grid-cols-[1fr_auto_1fr] items-center w-full mx-4">
-    <div class="logo pt-2 justify-self-start">
+    <div class="logo pt-2 justify-self-start flex items-center gap-2">
+      <img
+        src="images/logo-removebg.png"
+        alt="ChinaGO Logo"
+        class="w-10 h-10 rounded shadow"
+      />
       <a
         routerLink="/home"
         class="font-medium text-shadow-2xs text-shadow-red-600"
